@@ -80,7 +80,7 @@ class WSGIGateway(gateway.BaseGateway):
 
         # Decode the request
         try:
-            request = remoting.decode(body, context)
+            request = remoting.decode(body, context, strict=self.strict)
         except pyamf.DecodeError:
             self.logger.exception(gateway.format_exception())
 
@@ -126,7 +126,7 @@ class WSGIGateway(gateway.BaseGateway):
 
         # Encode the response
         try:
-            stream = remoting.encode(response, context)
+            stream = remoting.encode(response, context, strict=self.strict)
         except pyamf.EncodeError:
             self.logger.exception(gateway.format_exception())
 
